--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ API Basic Training/Part_2_Basics _of_C\#/.vs/slnx.sqlite
 API Basic Training/Part_2_Basics _of_C\#/.vs/Part_2_Basics _of_C\#/v17/.wsuo
 API Basic Training/Part_2_Basics _of_C\#/.vs/VSWorkspaceState.json
 /.vs
+/.suo
 /API Basic Training/Part_2_Basics _of_C#/5-Understanding Arrays/.vs/5-Understanding Arrays/FileContentIndex
 /API Basic Training/Part_2_Basics _of_C#/5-Understanding Arrays/.vs/5-Understanding Arrays/v17/.suo
 /API Basic Training/Part_2_Basics _of_C#/6-Define & calling of Methods/.vs/6-Define & calling of Methods/v17/.suo
