--- a/API Basic Training/C# Advance/ClassDemo/ClassDemo.csproj
+++ b/API Basic Training/C# Advance/ClassDemo/ClassDemo.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstract.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StaticDemo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
