--- a/API Basic Training/C# Advance/ClassDemo/ClassDemo.csproj
+++ b/API Basic Training/C# Advance/ClassDemo/ClassDemo.csproj
@@ -44,8 +44,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract.cs" />
+    <Compile Include="CustomerSupport.cs" />
+    <Compile Include="Developer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SealedDemo.cs" />
     <Compile Include="StaticDemo.cs" />
   </ItemGroup>
   <ItemGroup>
