--- a/API Basic Training/Part_2_Basics _of_C#/Test_of_Basic_C#_training/Test_of_Basic_C#_training.csproj
+++ b/API Basic Training/Part_2_Basics _of_C#/Test_of_Basic_C#_training/Test_of_Basic_C#_training.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Train.cs" />
+    <Compile Include="TrainLogic.cs" />
     <Compile Include="TrainManager.cs" />
   </ItemGroup>
   <ItemGroup>
