--- a/DotNet Core/CPContestRegistration/CPContestRegistration.csproj
+++ b/DotNet Core/CPContestRegistration/CPContestRegistration.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="NLog" Version="5.2.8" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="5.3.8" />
     <PackageReference Include="ServiceStack.OrmLite" Version="8.2.2" />
     <PackageReference Include="ServiceStack.OrmLite.MySql" Version="8.2.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
