--- a/API Basic Training/Part_6_Web_Development/Building_Web_API/Building_Web_API.csproj
+++ b/API Basic Training/Part_6_Web_Development/Building_Web_API/Building_Web_API.csproj
@@ -85,7 +85,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\EmployeeController.cs" />
+    <Compile Include="BL\BLEmployee.cs" />
+    <Compile Include="Controllers\CLEmployeeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
