--- a/API Basic Training/Part_6_Web_Development/Basic_Web_Api/Basic_Web_Api.csproj
+++ b/API Basic Training/Part_6_Web_Development/Basic_Web_Api/Basic_Web_Api.csproj
@@ -85,7 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\StudentController.cs" />
+    <Compile Include="Controllers\CLStudentController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
