--- a/API Basic Training/Part_6_Web_Development/Exception/Exception.csproj
+++ b/API Basic Training/Part_6_Web_Development/Exception/Exception.csproj
@@ -85,8 +85,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\EmployeeController.cs" />
-    <Compile Include="CustomExceptionFilterAttribute.cs" />
+    <Compile Include="BL\BLEmployee.cs" />
+    <Compile Include="Controllers\CLEmployeeController.cs" />
+    <Compile Include="Filters\CustomExceptionFilterAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
