--- a/API Basic Training/Part_6_Web_Development/CustomHeader/CustomHeader.csproj
+++ b/API Basic Training/Part_6_Web_Development/CustomHeader/CustomHeader.csproj
@@ -86,8 +86,8 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="BAL\Header.cs" />
-    <Compile Include="Controllers\EmployeeV1Controller.cs" />
-    <Compile Include="Controllers\EmployeeV2Controller.cs" />
+    <Compile Include="Controllers\CLEmployeeV1Controller.cs" />
+    <Compile Include="Controllers\CLEmployeeV2Controller.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
