--- a/API Basic Training/Part_6_Web_Development/CORS/CORS.csproj
+++ b/API Basic Training/Part_6_Web_Development/CORS/CORS.csproj
@@ -110,7 +110,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\CorsController.cs" />
+    <Compile Include="Controllers\CLCorsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
