Update Code HTTPCaching

--- a/API Basic Training/Part_6_Web_Development/HTTPcaching/HTTPcaching.csproj
+++ b/API Basic Training/Part_6_Web_Development/HTTPcaching/HTTPcaching.csproj
@@ -85,8 +85,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="CacheManager.cs" />
-    <Compile Include="Controllers\EmployeeController.cs" />
+    <Compile Include="BL\BLCacheManager.cs" />
+    <Compile Include="BL\BLEmployee.cs" />
+    <Compile Include="Controllers\CLEmployeeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
