--- a/API Basic Training/C# Advance/Advance_C#_FinalDemo/Advance_C#_FinalDemo.csproj
+++ b/API Basic Training/C# Advance/Advance_C#_FinalDemo/Advance_C#_FinalDemo.csproj
@@ -179,21 +179,29 @@
   <ItemGroup>
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="BL\BLCategory.cs" />
-    <Compile Include="BL\BLData.cs" />
-    <Compile Include="BL\BLDirector.cs" />
-    <Compile Include="BL\LoggingExceptionFilterAttribute.cs" />
-    <Compile Include="BL\BLMovies.cs" />
+    <Compile Include="BL\Interface\IDataHandlerService.cs" />
+    <Compile Include="BL\Service\BLCategory.cs" />
+    <Compile Include="BL\Service\BLData.cs" />
+    <Compile Include="BL\Service\BLDirector.cs" />
+    <Compile Include="Filters\LoggingExceptionFilterAttribute.cs" />
+    <Compile Include="BL\Service\BLMovies.cs" />
     <Compile Include="Controllers\CLAdminController.cs" />
     <Compile Include="Controllers\CLCategoryController.cs" />
     <Compile Include="Controllers\CLDirectorController.cs" />
     <Compile Include="Controllers\CLMoviesController.cs" />
+    <Compile Include="Extension\DTOtoPOCOExtension.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\CAT01.cs" />
-    <Compile Include="Models\DIR01.cs" />
-    <Compile Include="Models\MOV01.cs" />
+    <Compile Include="Models\DTO\DTOCAT01.cs" />
+    <Compile Include="Models\DTO\DTODIR01.cs" />
+    <Compile Include="Models\DTO\DTOMOV01.cs" />
+    <Compile Include="Models\Enum\EnmRole.cs" />
+    <Compile Include="Models\Enum\EnmType.cs" />
+    <Compile Include="Models\POCO\CAT01.cs" />
+    <Compile Include="Models\POCO\DIR01.cs" />
+    <Compile Include="Models\POCO\MOV01.cs" />
+    <Compile Include="Models\Response.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
