--- a/API Basic Training/C# Advance/DataBase_With_CRUD/bin/DataBase_With_CRUD.dll.config
+++ b/API Basic Training/C# Advance/DataBase_With_CRUD/bin/DataBase_With_CRUD.dll.config
@@ -64,4 +64,7 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+	<connectionStrings>
+		<add name="MyConnectionString" connectionString="Server=127.0.0.1;Port=3306;Database=employee_jeet;User Id=Admin;Password=gs@123;"/>
+	</connectionStrings>
 </configuration>
