--- a/API Basic Training/Part_6_Web_Development/CustomHeader/CustomHeader.csproj
+++ b/API Basic Training/Part_6_Web_Development/CustomHeader/CustomHeader.csproj
@@ -85,7 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="BAL\Header.cs" />
+    <Compile Include="BL\BLHeader.cs" />
     <Compile Include="Controllers\CLEmployeeV1Controller.cs" />
     <Compile Include="Controllers\CLEmployeeV2Controller.cs" />
     <Compile Include="Global.asax.cs">
