--- a/DotNet Core/CPContestRegistration/CPContestRegistration.csproj
+++ b/DotNet Core/CPContestRegistration/CPContestRegistration.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.28" />
     <PackageReference Include="MySql.Data" Version="8.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NLog" Version="5.2.8" />
@@ -14,6 +15,7 @@
     <PackageReference Include="ServiceStack.OrmLite" Version="8.2.2" />
     <PackageReference Include="ServiceStack.OrmLite.MySql" Version="8.2.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.2.3" />
   </ItemGroup>
 
 </Project>
