--- a/DotNet Core/Logging/nlog.config
+++ b/DotNet Core/Logging/nlog.config
@@ -17,8 +17,8 @@
 	<!-- Define rules for routing log messages to targets -->
 	<rules>
 		<!-- Route all log messages with minimum level 'Trace' or higher to 'allfile' target -->
-		<logger name="*" minlevel="Trace" writeTo="allfile" />
+		<logger name="loger1" minlevel="Trace" writeTo="allfile" />
 		<!-- Route all log messages with minimum level 'Error' or higher to 'errorFile' target -->
-		<logger name="*" minlevel="Error" writeTo="errorFile" />
+		<logger name="loger1" minlevel="Error" writeTo="errorFile" />
 	</rules>
 </nlog>
