--- a/API Basic Training/C# Advance/Advance_C#_FinalDemo/Advance_C#_FinalDemo.csproj
+++ b/API Basic Training/C# Advance/Advance_C#_FinalDemo/Advance_C#_FinalDemo.csproj
@@ -71,6 +71,18 @@
       <HintPath>packages\Microsoft.Bcl.AsyncInterfaces.8.0.0\lib\net462\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.IdentityModel.Abstractions, Version=7.3.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.IdentityModel.Abstractions.7.3.1\lib\net472\Microsoft.IdentityModel.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.IdentityModel.JsonWebTokens, Version=7.3.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.IdentityModel.JsonWebTokens.7.3.1\lib\net472\Microsoft.IdentityModel.JsonWebTokens.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.IdentityModel.Logging, Version=7.3.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.IdentityModel.Logging.7.3.1\lib\net472\Microsoft.IdentityModel.Logging.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.IdentityModel.Tokens, Version=7.3.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.IdentityModel.Tokens.7.3.1\lib\net472\Microsoft.IdentityModel.Tokens.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.IO.RecyclableMemoryStream, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.IO.RecyclableMemoryStream.3.0.0\lib\netstandard2.0\Microsoft.IO.RecyclableMemoryStream.dll</HintPath>
     </Reference>
@@ -114,6 +126,9 @@
     <Reference Include="System.Diagnostics.DiagnosticSource, Version=7.0.0.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\System.Diagnostics.DiagnosticSource.7.0.2\lib\net462\System.Diagnostics.DiagnosticSource.dll</HintPath>
     </Reference>
+    <Reference Include="System.IdentityModel.Tokens.Jwt, Version=7.3.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>packages\System.IdentityModel.Tokens.Jwt.7.3.1\lib\net472\System.IdentityModel.Tokens.Jwt.dll</HintPath>
+    </Reference>
     <Reference Include="System.IO.Pipelines, Version=5.0.0.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\System.IO.Pipelines.5.0.2\lib\net461\System.IO.Pipelines.dll</HintPath>
     </Reference>
@@ -131,10 +146,19 @@
       <HintPath>packages\System.Runtime.CompilerServices.Unsafe.6.0.0\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
     <Reference Include="System.Security" />
+    <Reference Include="System.Text.Encodings.Web, Version=4.0.5.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.Text.Encodings.Web.4.7.2\lib\net461\System.Text.Encodings.Web.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Text.Json, Version=4.0.1.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.Text.Json.4.7.2\lib\net461\System.Text.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System.Transactions" />
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -179,18 +203,25 @@
   <ItemGroup>
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Attribute\BearerAuthAttribute.cs" />
+    <Compile Include="Attribute\ValidateModelAttribute.cs" />
     <Compile Include="BL\Interface\IDataHandlerService.cs" />
-    <Compile Include="BL\Service\BLCategory.cs" />
+    <Compile Include="BL\Service\BLCAT01.cs" />
     <Compile Include="BL\Service\BLData.cs" />
-    <Compile Include="BL\Service\BLDirector.cs" />
-    <Compile Include="DL\DBCategoryContext.cs" />
-    <Compile Include="DL\DBDirectorContext.cs" />
+    <Compile Include="BL\Service\BLDIR01.cs" />
+    <Compile Include="BL\Service\BLEncryption.cs" />
+    <Compile Include="BL\Service\BLToken.cs" />
+    <Compile Include="BL\Service\BLUSR01.cs" />
+    <Compile Include="Controllers\CLAuthenticationController.cs" />
+    <Compile Include="Controllers\CLUSR01Controller.cs" />
+    <Compile Include="DL\DBCAT01Context.cs" />
+    <Compile Include="DL\DBDIR01Context.cs" />
     <Compile Include="Filters\LoggingExceptionFilterAttribute.cs" />
-    <Compile Include="BL\Service\BLMovies.cs" />
+    <Compile Include="BL\Service\BLMOV01.cs" />
     <Compile Include="Controllers\CLAdminController.cs" />
-    <Compile Include="Controllers\CLCategoryController.cs" />
-    <Compile Include="Controllers\CLDirectorController.cs" />
-    <Compile Include="Controllers\CLMoviesController.cs" />
+    <Compile Include="Controllers\CLCAT01Controller.cs" />
+    <Compile Include="Controllers\CLDIR01Controller.cs" />
+    <Compile Include="Controllers\CLMOV01Controller.cs" />
     <Compile Include="Extension\DTOtoPOCOExtension.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -198,11 +229,12 @@
     <Compile Include="Models\DTO\DTOCAT01.cs" />
     <Compile Include="Models\DTO\DTODIR01.cs" />
     <Compile Include="Models\DTO\DTOMOV01.cs" />
-    <Compile Include="Models\Enum\EnmRole.cs" />
-    <Compile Include="Models\Enum\EnmType.cs" />
+    <Compile Include="Models\DTO\DTOUSR01.cs" />
+    <Compile Include="Models\Enum\Enum.cs" />
     <Compile Include="Models\POCO\CAT01.cs" />
     <Compile Include="Models\POCO\DIR01.cs" />
     <Compile Include="Models\POCO\MOV01.cs" />
+    <Compile Include="Models\POCO\USR01.cs" />
     <Compile Include="Models\Response.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -233,7 +265,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>49320</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:49320/</IISUrl>
+          <IISUrl>http://localhost:49328/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
