--- a/API Basic Training/C# Advance/Advance_C#_FinalDemo/packages.config
+++ b/API Basic Training/C# Advance/Advance_C#_FinalDemo/packages.config
@@ -15,6 +15,10 @@
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="7.3.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="7.3.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="7.3.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="7.3.1" targetFramework="net472" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="3.0.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net472" />
   <package id="MySql.Data" version="8.3.0" targetFramework="net472" />
@@ -30,11 +34,15 @@
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="7.0.2" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="7.3.1" targetFramework="net472" />
   <package id="System.IO.Pipelines" version="5.0.2" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="4.7.2" targetFramework="net472" />
+  <package id="System.Text.Json" version="4.7.2" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net472" />
   <package id="ZstdSharp.Port" version="0.7.1" targetFramework="net472" />
 </packages>
